Prevent scroll on mobile

--- a/react_app/src/styles.css
+++ b/react_app/src/styles.css
@@ -21,6 +21,8 @@ code {
 
 .stage {
   background-color: #333;
+  user-select: none;
+  overflow: hidden;
 }
 .stage-wrapper {
   display: flex;
